<resources>
    <string name="app_name">FixMe2</string>
    <string name="edit_message">Opisz usterkę</string>
    <string name="button_send">Wyślij</string>
    <string name="edit_place">Wpisz numer sali</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="choose_tag">Wybierz tag</string>
    <string-array name="tags">
        <item>Zepsuty przedmiot</item>
        <item>Hydraulika</item>
        <item>Ogień</item>
        <item>Wybita szyba</item>
    </string-array>
    <string name="nr_sali">Wpisz nr sali</string>
    <string name="poka_z_tagiem">Pokaż z tagiem</string>
    <string name="wysy_aj_zg_oszenia">Wysyłaj Zgłoszenia</string>
    <string name="poka_ostatnie">Pokaż Ostatnie</string>
    <string name="poka_w_okolicy">Pokaż w okolicy</string>
    <string name="nr_sali_hint">nr sali</string>
    <string name="title_activity_login">Zaloguj się</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="title_activity_main4">Main4Activity</string>
</resources>
