<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertFilterActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="151dp"
        android:layout_height="84dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/nr_sali_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="157dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:onClick="pokazWOkolicy"
        android:text="@string/poka_w_okolicy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="157dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:onClick="pokazZTagiem"
        android:text="@string/poka_z_tagiem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="192dp"
        android:layout_height="74dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="40dp"
        android:onClick="pokazTabelke"
        android:text="@string/poka_ostatnie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="163dp"
        android:layout_height="74dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="216dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>