<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_place"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="372dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="352dp"
        android:layout_height="200dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/edit_message"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="93dp"
        tools:text="@string/edit_message" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="dispatchTakePictureIntent"
        android:text="Zrób Zdjęcie"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="308dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="112dp"
        android:layout_height="119dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="22dp" />

    <Spinner
        android:id="@+id/tags"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText" />

</android.support.constraint.ConstraintLayout>